docs/api/qiskit/0.37/qiskit.quantum_info.Kraus.mdx
---
title: Kraus (v0.37)
description: API reference for qiskit.quantum_info.Kraus in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Kraus
---

# Kraus

<Class id="qiskit.quantum_info.Kraus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/quantum_info/operators/channel/kraus.py" signature="Kraus(data, input_dims=None, output_dims=None)" modifiers="class">
  Bases: `qiskit.quantum_info.operators.channel.quantum_channel.QuantumChannel`

  Kraus representation of a quantum channel.

  For a quantum channel $\mathcal{E}$, the Kraus representation is given by a set of matrices $[A_0,...,A_{K-1}]$ such that the evolution of a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ is given by

$$
\mathcal{E}(\rho) = \sum_{i=0}^{K-1} A_i \rho A_i^\dagger
$$

  A general operator map $\mathcal{G}$ can also be written using the generalized Kraus representation which is given by two sets of matrices $[A_0,...,A_{K-1}]$, $[B_0,...,A_{B-1}]$ such that

$$
\mathcal{G}(\rho) = \sum_{i=0}^{K-1} A_i \rho B_i^\dagger
$$

  See reference \[1] for further details.

  **References**

  1.  C.J. Wood, J.D. Biamonte, D.G. Cory, *Tensor networks and graphical calculus for open quantum systems*, Quant. Inf. Comp. 15, 0579-0811 (2015). [arXiv:1111.6950 \[quant-ph\]](https://arxiv.org/abs/1111.6950)

  Initialize a quantum channel Kraus operator.

  **Parameters**

  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as a a list of Kraus matrices.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a list of Numpy arrays of shape (2\*\*N, 2\*\*N) qubit systems will be used. If the input does not correspond to an N-qubit channel, it will assign a single subsystem with dimension specified by the shape of the input.

  ## Methods

  <span id="qiskit-quantum-info-kraus-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.Kraus.adjoint" signature="Kraus.adjoint()">
    Return the adjoint quantum channel.

    <Admonition title="Note" type="note">
      This is equivalent to the matrix Hermitian conjugate in the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation ie. for a channel $\mathcal{E}$, the SuperOp of the adjoint channel $\mathcal{{E}}^\dagger$ is $S_{\mathcal{E}^\dagger} = S_{\mathcal{E}}^\dagger$.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-kraus-compose" />

  ### compose

  <Function id="qiskit.quantum_info.Kraus.compose" signature="Kraus.compose(other, qargs=None, front=False)">
    Return the operator composition with another Kraus.

    **Parameters**

    *   **other** ([*Kraus*](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")) – a Kraus object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The composed Kraus.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.

    <Admonition title="Note" type="note">
      Composition (`&`) by default is defined as left matrix multiplication for matrix operators, while `@` (equivalent to [`dot()`](qiskit.quantum_info.Kraus#dot "qiskit.quantum_info.Kraus.dot")) is defined as right matrix multiplication. That is that `A & B == A.compose(B)` is equivalent to `B @ A == B.dot(A)` when `A` and `B` are of the same type.

      Setting the `front=True` kwarg changes this to right matrix multiplication and is equivalent to the [`dot()`](qiskit.quantum_info.Kraus#dot "qiskit.quantum_info.Kraus.dot") method `A.dot(B) == A.compose(B, front=True)`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-kraus-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.Kraus.conjugate" signature="Kraus.conjugate()">
    Return the conjugate quantum channel.

    <Admonition title="Note" type="note">
      This is equivalent to the matrix complex conjugate in the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation ie. for a channel $\mathcal{E}$, the SuperOp of the conjugate channel $\overline{{\mathcal{{E}}}}$ is $S_{\overline{\mathcal{E}^\dagger}} = \overline{S_{\mathcal{E}}}$.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-kraus-copy" />

  ### copy

  <Function id="qiskit.quantum_info.Kraus.copy" signature="Kraus.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="qiskit-quantum-info-kraus-dot" />

  ### dot

  <Function id="qiskit.quantum_info.Kraus.dot" signature="Kraus.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).

    **Returns**

    The right matrix multiplied Operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    <Admonition title="Note" type="note">
      The dot product can be obtained using the `@` binary operator. Hence `a.dot(b)` is equivalent to `a @ b`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-kraus-expand" />

  ### expand

  <Function id="qiskit.quantum_info.Kraus.expand" signature="Kraus.expand(other)">
    Return the reverse-order tensor product with another Kraus.

    **Parameters**

    **other** ([*Kraus*](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")) – a Kraus object.

    **Returns**

    **the tensor product $b \otimes a$, where $a$**

    is the current Kraus, and $b$ is the other Kraus.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")
  </Function>

  <span id="qiskit-quantum-info-kraus-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.Kraus.input_dims" signature="Kraus.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="qiskit-quantum-info-kraus-is-cp" />

  ### is\_cp

  <Function id="qiskit.quantum_info.Kraus.is_cp" signature="Kraus.is_cp(atol=None, rtol=None)">
    Test if Choi-matrix is completely-positive (CP)
  </Function>

  <span id="qiskit-quantum-info-kraus-is-cptp" />

  ### is\_cptp

  <Function id="qiskit.quantum_info.Kraus.is_cptp" signature="Kraus.is_cptp(atol=None, rtol=None)">
    Return True if completely-positive trace-preserving.
  </Function>

  <span id="qiskit-quantum-info-kraus-is-tp" />

  ### is\_tp

  <Function id="qiskit.quantum_info.Kraus.is_tp" signature="Kraus.is_tp(atol=None, rtol=None)">
    Test if a channel is trace-preserving (TP)
  </Function>

  <span id="qiskit-quantum-info-kraus-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.Kraus.is_unitary" signature="Kraus.is_unitary(atol=None, rtol=None)">
    Return True if QuantumChannel is a unitary channel.
  </Function>

  <span id="qiskit-quantum-info-kraus-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.Kraus.output_dims" signature="Kraus.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="qiskit-quantum-info-kraus-power" />

  ### power

  <Function id="qiskit.quantum_info.Kraus.power" signature="Kraus.power(n)">
    Return the power of the quantum channel.

    **Parameters**

    **n** (*float*) – the power exponent.

    **Returns**

    the channel $\mathcal{{E}} ^n$.

    **Return type**

    [SuperOp](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp")

    **Raises**

    **QiskitError** – if the input and output dimensions of the SuperOp are not equal.

    <Admonition title="Note" type="note">
      For non-positive or non-integer exponents the power is defined as the matrix power of the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation ie. for a channel $\mathcal{{E}}$, the SuperOp of the powered channel $\mathcal{{E}}^\n$ is $S_{{\mathcal{{E}}^n}} = S_{{\mathcal{{E}}}}^n$.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-kraus-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.Kraus.reshape" signature="Kraus.reshape(input_dims=None, output_dims=None, num_qubits=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    **Parameters**

    *   **input\_dims** (*None or tuple*) – new subsystem input dimensions. If None the original input dims will be preserved \[Default: None].
    *   **output\_dims** (*None or tuple*) – new subsystem output dimensions. If None the original output dims will be preserved \[Default: None].
    *   **num\_qubits** (*None or int*) – reshape to an N-qubit operator \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="qiskit-quantum-info-kraus-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.Kraus.tensor" signature="Kraus.tensor(other)">
    Return the tensor product with another Kraus.

    **Parameters**

    **other** ([*Kraus*](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")) – a Kraus object.

    **Returns**

    **the tensor product $a \otimes b$, where $a$**

    is the current Kraus, and $b$ is the other Kraus.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    <Admonition title="Note" type="note">
      The tensor product can be obtained using the `^` binary operator. Hence `a.tensor(b)` is equivalent to `a ^ b`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-kraus-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.Kraus.to_instruction" signature="Kraus.to_instruction()">
    Convert to a Kraus or UnitaryGate circuit instruction.

    If the channel is unitary it will be added as a unitary gate, otherwise it will be added as a kraus simulator instruction.

    **Returns**

    A kraus instruction for the channel.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **QiskitError** – if input data is not an N-qubit CPTP quantum channel.
  </Function>

  <span id="qiskit-quantum-info-kraus-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.Kraus.to_operator" signature="Kraus.to_operator()">
    Try to convert channel to a unitary representation Operator.
  </Function>

  <span id="qiskit-quantum-info-kraus-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.Kraus.transpose" signature="Kraus.transpose()">
    Return the transpose quantum channel.

    <Admonition title="Note" type="note">
      This is equivalent to the matrix transpose in the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation, ie. for a channel $\mathcal{E}$, the SuperOp of the transpose channel $\mathcal{{E}}^T$ is $S_{mathcal{E}^T} = S_{\mathcal{E}}^T$.
    </Admonition>
  </Function>

  ## Attributes

  ### atol

  <Attribute id="qiskit.quantum_info.Kraus.atol" attributeValue="1e-08" />

  ### data

  <Attribute id="qiskit.quantum_info.Kraus.data">
    Return list of Kraus matrices for channel.
  </Attribute>

  ### dim

  <Attribute id="qiskit.quantum_info.Kraus.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Kraus.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  ### qargs

  <Attribute id="qiskit.quantum_info.Kraus.qargs">
    Return the qargs for the operator.
  </Attribute>

  ### rtol

  <Attribute id="qiskit.quantum_info.Kraus.rtol" attributeValue="1e-05" />

  ### settings

  <Attribute id="qiskit.quantum_info.Kraus.settings">
    Return settings.
  </Attribute>
</Class>

